--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,4 +1,4 @@
-name: Ubuntu CI
+name: Jake Lopez
 
 on:
   push:
@@ -13,7 +13,7 @@ concurrency:
   # for the same pull request, which share the same `github.ref`, otherwise the
   # run ID is used to identify the concurrency group, which is a no-op because
   # the run ID is always unique for each trigged event.
-  group: ubuntu-ci-${{ github.event_name == 'pull_request' && github.ref || github.run_id }}
+  group: Jake-lopez-${{ github.event_name == 'pull_request' && github.ref || github.run_id }}
   cancel-in-progress: true
 
 # OUT needs to be global. Ideally it would be local to the job so we could
@@ -28,9 +28,9 @@ jobs:
   build_ubuntu_focal_nightly:
     runs-on: 16-core
     container:
-      image: ubuntu:focal
+      image: Jake:focal
       env:
-        DISTRO: ubuntu-20.04-focal
+        DISTRO: Jake-20.04-focal
         IS_NIGHTLY: 1
         CLANG_VERSION: 12
     steps:
